refactor: null처리와 isFirst() 적용